--- a/fq-projects/page.html
+++ b/fq-projects/page.html
@@ -254,7 +254,7 @@
     <!-- 分发入口 -->
     <!-- dwjqp08.com dwjqp09.com dwjqp10.com -->
     <div class="go_to_entry">
-      <img src="./img/go_to_h5_page.gif" alt="" onClick="goToH5Page();" />
+      <img class="ios_hide" src="./img/go_to_h5_page.gif" alt="" onClick="goToH5Page();" />
       <img class="look ios_hide" src="./img/whatwei-btn.gif" alt="">
       <div class="teach_ios_course">
         <a href="/ios.html" class="android_hide"> <img src="./img/install_ios.gif" alt="" /></a>
