--- a/mgqp9.com/page.html
+++ b/mgqp9.com/page.html
@@ -662,7 +662,7 @@
     // }
   }
 
-  function goToH5Page() {
+  function goToH5Page(link) {
     // 分发入口功能
     if ((h5channelCode != 30000) || (fxm != 0) || (sign != "default")) {
       link = link + "?sign=" + sign + "&fxm=" + fxm + "&channel_id=" + h5channelCode;
